# Automatic-CaScoring-From-Chest-CT

./: .gitignore  README.md
Models/: crop_roi.ipynb  crop_roi.py  helpers.py  test_models.py
Models/CaScore/: CaParser.py  main.py
Models/Segmentation/: CAC.py  CaParser.py  CustomCallbacks.py  Generator.py  Inference.py  NiftyGen.py  Parser.py  apps.py  callbacks.py  functions.py  main.py  stats.py  unet.py
Models/Segmentation/Models_Saved/Heart_Localization/: keras_metadata.pb  saved_model.pb
Models/Segmentation/Unet/: __enums.py  __init__.py  modes.py  unet.py
Models/Segmentation/logs/train/: events.out.tfevents.1618171251.DESKTOP-1VHQP9P.11768.0.v2  (+1 more)
Models/uilities/: helpers.py  test_models.py
Remote-Communication-Module-3D-Slicer/: README.md
Remote-Communication-Module-3D-Slicer/client-side-module/CAD_Scoring_Suit_Extension/: CMakeLists.txt
Remote-Communication-Module-3D-Slicer/client-side-module/CAD_Scoring_Suit_Extension/CaScoreModule/: CMakeLists.txt  CaScoreModule.py  Processes.py
Remote-Communication-Module-3D-Slicer/client-side-module/CAD_Scoring_Suit_Extension/CaScoreModule/Resources/ProcessScripts/: SegAndCrop.slicer.py  Segmentation.slicer.py
Remote-Communication-Module-3D-Slicer/client-side-module/CAD_Scoring_Suit_Extension/CaScoreModule/Resources/UI/: CaScoreModule.ui
Remote-Communication-Module-3D-Slicer/client-side-module/CAD_Scoring_Suit_Extension/SegmentationFromModel/: CMakeLists.txt  SegmentationFromModel.py  SegmentationFromModel.xml
Remote-Communication-Module-3D-Slicer/client-side-module/CaScoreModule/: CaScoreModule.py
Remote-Communication-Module-3D-Slicer/flask-server/: .flaskenv  app.py  requirements.txt
Remote-Communication-Module-for-3D-Slicer/client-side-module/: client-side.py
(+6 files in other folders)
